Creating a user & post entity in the database, and fetching the data the for the user from database.

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		<!-- Dependency for HAL explorer -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-rest-hal-explorer</artifactId>
+		</dependency>
 
 	</dependencies>
 
