--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#Exposing all the end-points of spring-actuator
 management.endpoints.web.exposure.include=*
+
+#H2 database configuration
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:test
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+
