--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Exposing all the end-points of spring-actuator
-management.endpoints.web.exposure.include=*
+# management.endpoints.web.exposure.include=*
 
 #H2 database configuration
 spring.h2.console.enabled=true
